crates/stackable-versioned-macros/tests/inputs/default/fail/changed.stderr
error: the previous name must not start with the deprecation prefix
  --> tests/inputs/default/fail/changed.rs:12:52
   |
12 |             changed(since = "v1beta1", from_name = "deprecated_bar"),
   |                                                    ^^^^^^^^^^^^^^^^

error: the previous name must not start with the deprecation prefix
  --> tests/inputs/default/fail/changed.rs:13:47
   |
13 |             changed(since = "v1", from_name = "deprecated_baz"),
   |                                               ^^^^^^^^^^^^^^^^

error: both `from_name` and `from_type` are unset. Is this `changed()` action needed?
  --> tests/inputs/default/fail/changed.rs:14:29
   |
14 |             changed(since = "v2")
   |                             ^^^^
